k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a
  labels:
    app: app-a
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app-a
